--- a/app/slider/templates/sliderTemplate.html
+++ b/app/slider/templates/sliderTemplate.html
@@ -5,9 +5,8 @@
   height: 300px;
   overflow: hidden;
 }
-.slider {
+/* .slider {
   position: relative;
-  /* display: inline-block; */
   width: 500px;
   height: 200px;
   background-color: gray;
@@ -26,13 +25,52 @@ ng-hide {
   100% {
     left: 100%;
   }
+} */
+.slider {
+  position: relative;
+  padding: 5px;
+  width: 610px;
+  margin: auto;
+  margin-top: 40px;
+}
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-shadow: 0px 0px 15px #999;
+}
+.slide.ng-hide-add,
+.slide.ng-hide-remove {
+  -webkit-transition: all linear 0.5s;
+  -moz-transition: all linear 0.5s;
+  -o-transition: all linear 0.5s;
+  transition: all linear 0.5s;
+  display: block!important;
+}
+.slide.ng-hide-add.ng-hide-add-active,
+.slide.ng-hide-remove {
+  opacity: 0;
+}
+.slide.ng-hide-add,
+.slide.ng-hide-remove.ng-hide-remove-active {
+  opacity: 1;
+}
+.temp {
+  width: 100px;
+  height: 100px;
+  border: 1px solid gray;
+  position: absolute;
+  top: 50px;
+  right: 50px;
 }
 </style>
-<div ng-controller="sliderController">
-    <div class="slideshow">
-        <div ng-hide="n" class="slider">
-
-        </div>
+<div class="slider" ng-controller="sliderController">
+    <div class="slide" ng-repeat="slide in slideshow track by $index" ng-show="slide.visible">
+      <img src="assets/images/{{slide.src}}" width="300px">
     </div>
+<div class="temp">
+    <button ng-click="previous()">Previous</button><button ng-click="next()">Next</button>
+    <br>
+    <a href="#" ng-repeat="slide in slideshow track by $index" ng-click="thisImage($index)">{{$index}}</a>
+  </div>
 </div>
-<button ng-click="next">Next</button>
