--- a/app/slider/templates/sliderTemplate.html
+++ b/app/slider/templates/sliderTemplate.html
@@ -1,76 +1,96 @@
 <style>
-.slideshow {
-  background-color: #fff;
-  width: 500px;
-  height: 300px;
-  overflow: hidden;
-}
-/* .slider {
-  position: relative;
-  width: 500px;
-  height: 200px;
-  background-color: gray;
-  left: 0px;
-  top: 0px;
-  
-  animation-duration: 4s;
-  animation-timing-function: ease;
-  animation-iteration-count: 1;
-  animation-delay: 3s;
-}
-ng-hide {
-    animation-name: my;
-}
-@keyframes my {
-  100% {
-    left: 100%;
+  .slideshow {
+    width: 90%;
+    margin: auto;
+    background-color: blanchedalmond;
   }
-} */
-.slider {
-  position: relative;
-  padding: 5px;
-  width: 610px;
-  margin: auto;
-  margin-top: 40px;
-}
-.slide {
-  position: absolute;
-  top: 0;
-  left: 0;
-  box-shadow: 0px 0px 15px #999;
-}
-.slide.ng-hide-add,
-.slide.ng-hide-remove {
-  -webkit-transition: all linear 0.5s;
-  -moz-transition: all linear 0.5s;
-  -o-transition: all linear 0.5s;
-  transition: all linear 0.5s;
-  display: block!important;
-}
-.slide.ng-hide-add.ng-hide-add-active,
-.slide.ng-hide-remove {
-  opacity: 0;
-}
-.slide.ng-hide-add,
-.slide.ng-hide-remove.ng-hide-remove-active {
-  opacity: 1;
-}
-.temp {
-  width: 100px;
-  height: 100px;
-  border: 1px solid gray;
-  position: absolute;
-  top: 50px;
-  right: 50px;
-}
+
+  .slider {
+    position: relative;
+    width: 100%;
+    background-color: cadetblue;
+  }
+
+  .slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    box-shadow: 0px 0px 15px #999;
+  }
+
+  .slide.ng-hide-add,
+  .slide.ng-hide-remove {
+    -webkit-transition: all linear 0.5s;
+    -moz-transition: all linear 0.5s;
+    -o-transition: all linear 0.5s;
+    transition: all linear 0.5s;
+    display: block !important;
+  }
+
+  .slide.ng-hide-add.ng-hide-add-active,
+  .slide.ng-hide-remove {
+    opacity: 0;
+  }
+
+  .slide.ng-hide-add,
+  .slide.ng-hide-remove.ng-hide-remove-active {
+    opacity: 1;
+  }
+
+  .slideoverlay {
+    /* width: 100%; */
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
+    user-select: none;
+  }
+
+  .sliderArrows {
+    position: relative;
+    font-size: 208px;
+    color: rgba(255, 255, 255, 0.3);
+    top: 100px;
+    cursor: pointer;
+  }
+
+  .sliderArrows.right {
+    float: right;
+  }
+
+  .img {
+    width: 100%;
+  }
+  .btnGroup {
+    /* background-color: bisque; */
+    width: 150px;
+    text-align: center;
+    margin: auto;
+    position: relative;
+    top: 180px;
+  }
+  .rowbtns {
+    padding: 10px;
+    color: rgba(255, 255, 255, 0.5);
+    cursor: pointer;
+  }
+  .rowbtns.active {
+    color: gray;
+  }
 </style>
-<div class="slider" ng-controller="sliderController">
+<div class="slideshow">
+  <div class="slider" ng-controller="sliderController">
     <div class="slide" ng-repeat="slide in slideshow track by $index" ng-show="slide.visible">
-      <img src="assets/images/{{slide.src}}" width="300px">
+      <img class="img" src="assets/images/{{slide.src}}" width="100%">
     </div>
-<div class="temp">
-    <button ng-click="previous()">Previous</button><button ng-click="next()">Next</button>
-    <br>
-    <a href="#" ng-repeat="slide in slideshow track by $index" ng-click="thisImage($index)">{{$index}}</a>
+    <div class="slideoverlay">
+      <i ng-click="previous()" class="material-icons sliderArrows">keyboard_arrow_left</i>
+      <i ng-click="next()" class="material-icons sliderArrows right">keyboard_arrow_right</i>
+      <!-- <button ng-click="previous()">Previous</button><button ng-click="next()">Next</button> -->
+      <div class="btnGroup">
+      <!-- <a href="#" ng-repeat="slide in slideshow track by $index" ng-click="thisImage($index)">{{$index}}</a> -->
+      <i class="material-icons rowbtns" ng-repeat="slide in slideshow track by $index" ng-click="thisImage($index)">fiber_manual_record</i>
+    </div>
+    </div>
   </div>
 </div>
