--- a/app/slider/templates/sliderTemplate.html
+++ b/app/slider/templates/sliderTemplate.html
@@ -97,6 +97,8 @@
     padding: 10px;
     color: rgba(255, 255, 255, 0.5);
     cursor: pointer;
+    background: rbga(0, 0, 0, 0.7);
+    text-shadow: 5px 5px 15px rbga(0, 0, 0, 0.9);
   }
   .rowbtns.active {
     color: gray
@@ -135,7 +137,7 @@
       <i ng-click="previous()" class="material-icons sliderArrows">keyboard_arrow_left</i>
       <i ng-click="next()" class="material-icons sliderArrows right">keyboard_arrow_right</i>
       <div class="btnGroup">
-      <i class="material-icons rowbtns" ng-repeat="slide in slideshow track by $index" ng-class="{active: slide.visible}" ng-show="($index - currentIndex) < 3 && ($index - currentIndex) > -3" ng-click="thisImage($index)">fiber_manual_record</i>
+      <i class="material-icons rowbtns" ng-repeat="slide in viewDots track by $index" ng-class="{active: slide.visible}" ng-click="thisImage($index)">fiber_manual_record</i>
     </div>
     </div>
   </div>
